--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -4,7 +4,7 @@
     bottom: 0px;
     left: 0px;
     width: 100%;
-    height: 70px;
+    height: 60px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
@@ -38,8 +38,8 @@
 }
 
 .navbar img {
-    height: 75px;
-    justify-content: space-between;
+    height: 60px;
+    justify-content: space-evenly;
     align-self: center; 
-    padding: 10px;
+    padding-left: 200px;
 }
