--- a/css/global.css
+++ b/css/global.css
@@ -11,3 +11,13 @@ body {
     font-family: sans-serif;
     background-color: lightcyan;
 }
+
+.main-content {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0px;
+    margin: 30px;
+    overflow: hidden;    
+}
