--- a/css/components/button.css
+++ b/css/components/button.css
@@ -24,7 +24,7 @@
     position: absolute;
     width: 200px;
     height: 200px;
-    background:  #1c56ad;
+    background:  #2bb554;
     transition: 0.4s;
     z-index: 0;
     border-radius: 500px;
