--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -11,6 +11,7 @@
     gap: 40px;
     margin: 0 0 0 0;
     padding: 50px 0px;
+
 }
 
 .card {
@@ -24,6 +25,7 @@
     align-items: center;
     flex-wrap: wrap;
     border: 2px solid black;
+    background-color: white;
 }
 
 h4  {
@@ -90,8 +92,6 @@ h4  {
     cursor: pointer;
 }
 
-.bookmark.bookmark--active,
-.bookmark:hover,
-.bookmark:focus {
-  color: #1c56ad;
+.bookmark.bookmark--active, .bookmark:hover, .bookmark:focus {
+  color: #2d9f42;
 }
