--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,44 +2,42 @@
     display: block;
     position: fixed;
     bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 60px;
+    width: 60%;
+    margin-left: 150px;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    height: 40px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .navbar {
     display: block;
-    width: 100%;
     height: 100%;
-    justify-content: space-around;
-    background-color: bisque;
-    height: 10vh;
+    width: 100%;
+    justify-content: space-between;
+    overflow: hidden;
+    background-color: lightblue;
     align-self: center;
 }
 
 .navigation__item a {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
-    width: 100%;
     height: 100%;
-    font-size: 1.5rem;
-    background: var(--color);
-    color: var(--white);
-    transition: 0.3s;
 }
 
 .navigation__item.navigation__item--active a,
 .navigation__item a:hover,
 .navigation__item a:focus {
-    background: #1c56ad;
+    background: #255cae;
 }
 
 .navbar img {
-    height: 60px;
-    justify-content: space-evenly;
+    height: 40px;
+    justify-content: center;
     align-self: center; 
+    align-items: center;
     padding-left: 200px;
 }
