--- a/css/components/header.css
+++ b/css/components/header.css
@@ -7,14 +7,14 @@ header {
 
 h1 {
     text-align: center;
-    background-color: forestgreen;
-    color: gold;
+    background-color: darkblue;
+    color: lightseagreen;
     font-size: 3em;
     width: auto;
     margin: 20px ;
     top: 0;
     left: 10px;
     right:10px;
-    text-shadow: 4px 4px darkgreen;
+    text-shadow: 4px 4px black;
     position: absolute;
 }
