--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,4 +1,4 @@
-.footerContainer {
+/*.footerContainer {
     display: block;
     position: fixed;
     bottom: 0px;
@@ -41,3 +41,52 @@
     align-items: center;
     padding-left: 200px;
 }
+    */
+
+
+.navigation {
+    display: flex;
+    position: fixed;
+    bottom: 0px;
+    width: 60%;
+    justify-content: space-around;
+    align-items: center;
+    align-self: center;
+    height: 40px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+
+/*
+.navbar {
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+    background-color: lightblue;
+    align-self: center;
+}
+    */
+
+.navigation--list {
+    display: flex; 
+    list-style: none; 
+    width: 100%;
+    justify-content: space-around;
+    }
+    
+
+.navigation--item, .navigation--item a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation--item i {
+    font-size: 20px;;
+}
+
+.navigation--item.navigation--item--active a,
+.navigation--item a:hover,
+.navigation--item a:focus {
+    background: #b4a2ef;
+}
+
