--- a/css/global.css
+++ b/css/global.css
@@ -10,7 +10,7 @@ body {
     padding: 50px;
     font-family: sans-serif;
     background-color: lightcyan;
-    background-image: url('../images/quizbackground.png');
+    /*background-image: url('../images/quizbackground.png'); */
     background-size: fit;
 
 }
