--- a/css/global.css
+++ b/css/global.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
 }
 
-:root {}
+:root {
+    --background-color: darkblue;
+}
 
 body {
     margin: 0;
-    margin: 50px;
-    padding: 50px;
+    padding: 0;
     font-family: sans-serif;
     background-color: lightcyan;
     /*background-image: url('../images/quizbackground.png'); */
