--- a/css/components/section.css
+++ b/css/components/section.css
@@ -45,4 +45,148 @@ p {
     padding: 0;
 }
 
+/* --------------------------------------------------- */
+/* New Form page */
+.form--page {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: 90%;
+    margin: 100px auto 50px auto;
+    position: relative;
+}
 
+.form--card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 0;
+}
+
+.headline {
+  margin-top: 20px;
+  padding: 0;
+  display: flex;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.form b {
+    font-size: 18px;
+    font-weight: 800;
+     color: var(--black-color); 
+    transition: 0.3s;
+}
+
+.form p {
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: italic;
+    text-align: right;
+    opacity: 0.6;
+    font-weight: 400;
+    position: relative;
+    bottom: 0;
+    right: 0;
+}
+
+.input {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    border: 2px solid var(--white-color);
+    background: var(--white-color);
+    outline: none;
+    padding: 14px 20px;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 1.4;
+    font-weight: 700;
+    color: var(--black-color);
+    transition: border 0.3s;
+}
+
+.input:hover {
+    border: 2px solid var(--blue-color);
+  }
+  
+  .input:focus {
+    border: 2px solid var(--blue-color);
+  }
+  
+  .input.invalid {
+    border: 2px solid var(--invalid);
+  } 
+  
+  .input.input--area {
+    resize: horizontal vertical;
+    height: 150px;
+  }
+  
+  .form .button {
+    min-width: 180px;
+    margin: 0 auto;
+  }
+
+  .button {
+    display: flex;
+    justify-content: center;
+  }
+
+  .info {
+    display: block;
+    width: auto;
+    height: 0px;
+    position: relative;
+    overflow: hidden;
+    margin: 20px 0px;
+    transition: 0.3s;
+  }
+  
+  .info li {
+    padding: 6px 10px;
+    margin-bottom: 5px;
+  
+    color: var(--white-color);
+    font-size: 0.8rem;
+    border-radius: 8px;
+  }
+  
+  .info li b {
+    text-transform: capitalize;
+    font-weight: 400;
+    text-decoration: underline;
+  }
+  
+  .info li:last-child {
+    margin-bottom: 0px;
+  }
+  
+  .info[data-status="error"] li {
+    background: var(--invalid);
+  }
+  
+  .info[data-status="confirm"] li {
+    background: var(--purple-color);
+  }
+
+  .forms input[type="text"] {
+    width: 400px; 
+}
+
+.button {
+    display: flex;
+    align-items: center;
+}
