--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-    --background-color: darkblue;
+    --header-background-color: darkblue;
     --invalid: #c4412a;
     --blue-color: #465d84;
     --white-color: #ffffff;
