--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,6 @@
 @import url("./components/header.css");
 @import url("./components/cards.css");
 @import url("./global.css");
-@import url("./components/section.css");
+@import url("./components/form.css");
 @import url("./components/button.css");
+@import url("./components/profile.css");
