--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,7 @@
     --white-color: #ffffff;
     --black-color: #282525;
     --purple-color: #6904f7;
+    --background-color: lightcyan
 
     /* --font-family: "Nunito", sans-serif; */
 }
@@ -17,7 +18,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: lightcyan;
+    background-color: var(--background-color);
     /*background-image: url('../images/quizbackground.png'); */
     background-size: fit;
 
