--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import url("./components/form.css");
 @import url("./components/button.css");
 @import url("./components/profile.css");
+@import url("./components/darkmode.css");
