--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,14 +2,18 @@
     display: flex;
     position: fixed;
     bottom: 0px;
+    left: 0;
+    right: 0;
     width: 60%;
-    justify-content: space-around;
+    margin: 0 auto;
+    justify-content: space-evenly;
+    align-self: flex-end;
     align-items: center;
-    align-self: center;
     height: 40px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    background-color: white;
-    margin-left: 250px;
+    box-shadow: 0px 0px 20px rgba(69, 1, 57, 0.942);
+    background-color: #660066;
+    border-radius: 30px;
+    margin-top: 10px
 }
 
 /*
@@ -34,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(85, 26, 139);
+    color: rgb(235, 227, 243);
 }
 
 .navigation--item i {
