--- a/css/components/form.css
+++ b/css/components/form.css
@@ -8,8 +8,9 @@
     align-items: center;
     align-content: center;
     width: 90%;
-    margin: 10px auto 50px auto;
+    margin: 10px auto 50px;
     position: relative;
+    overflow: auto;
 }
 
 .form--card {
@@ -94,9 +95,17 @@
     margin: 0 auto;
   }
 
+  .container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
   .button {
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-self: center;
   }
 
   .info {
@@ -111,8 +120,7 @@
   
   .info li {
     padding: 6px 10px;
-    margin-bottom: 5px;
-  
+    margin-bottom: 5px;  
     color: var(--white-color);
     font-size: 0.8rem;
     border-radius: 8px;
