Move question cards into js code for index.html page

--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -53,8 +53,8 @@ h4  {
 
 .list-item-tags {
     padding: 5px;
-    background-color: cornflowerblue;
-    color: black;
+    background-color: #b39eb5;
+    color: white;
     border-radius: 10px;
 }
 
